make sure focus/hover states are not clipped

--- a/themes/console-home/static/css/page-type/feature.css
+++ b/themes/console-home/static/css/page-type/feature.css
@@ -54,6 +54,7 @@
     width: 21vw;
     max-width: calc(400px - 5vw);
     padding-bottom: var(--space4);
+    padding-left: var(--space0);
     bottom: 0;
 }
 
